# smart-grid-stability-classifier

./: Dockerfile  LICENSE  README.md  api.py  app.py  desktop.ini  grid_stability_model.pkl  grid_stability_notebook.ipynb  pyproject.toml  requirements.txt  smart_grid_updated_LAST.pptx
